Fix floating footer in Chrome and random other stuff

--- a/about.html
+++ b/about.html
@@ -42,24 +42,17 @@
         </div>
     </nav>
 
-    <!--header image-->
-
-    <!--Welcome Section-->
-    <div class="container-fluid about-header">
-      <h1>About Matt</h1>
-    </div>
-    <div class="text-center">
-      <img src="images/Matt.jpeg" alt="Matt" class="img-thumbnail matt-photo">
-      <p class="about-matt">Thank you for taking a look at my portfolio website!
+    <div class="container text-center">
+      <h1 class="pt-5">About Matt</h1>
+      <img src="images/Matt.jpeg" alt="Matt" height="200" width="200" class="img-thumbnail rounded-circle my-5">
+      <p class="pb-5">Thank you for taking a look at my portfolio website!
       This site is hosted on GitHub Pages and custom built with Bootstrap 4.0. All of my projects live here along with some other personal applications I have completed. I update this site periodically as I continue to learn more about web development and the wide world of programming. Please take a look at some of my <a href="projects.html">Projects</a> or feel free to <a href="contact.html">Contact Me</a> with any questions or suggestions.</p>
     </div>
 
   </body>
 
-  <footer>
-    <div class="container text-center">
-      Matthew Lynner 2020
-    </div>
+  <footer class="fixed-bottom text-center">
+    Matthew Lynner 2020
   </footer>
 
 </html>
