--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,75 @@
 <!DOCTYPE html>
 <html>
 <html lang="en">
-  <head>
-  <title>Matt Lynner Portfolio</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <!-- script -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </head>
+<head>
+<title>Matt Lynner Portfolio</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <!-- script -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
 
-  <body>
-    <!-- Navigation Section -->
+<body>
+  <!-- Navigation Section -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <a class="navbar-brand" href="index.html">Matt Lynner</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="index.html">Matt Lynner</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
-
-    <!--header image-->
-
-<!--CONTACT FORM-->
-<div class="container welcome-header">
-  <h1>Contact Me</h1>
-  <p>Questions?</p>
-</div>
-
-<div class="container form-container">
-<form action="https://formspree.io/matthewlynner@gmail.com" method="POST">
-  <div class="form-group">
-    <label for="Name">Name</label>
-    <input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
+  <div class="container">
+    <div class="text-center pt-5">
+      <h1>Contact Me</h1>
+      <p>Questions?</p>
+    </div>
+    <!--CONTACT FORM-->
+    <form action="https://formspree.io/matthewlynner@gmail.com" method="POST">
+      <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
+      </div>
+      <div class="form-group">
+        <label for="Email">Email address</label>
+        <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
+        <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else :)</small>
+      </div>
+      <div class="form-group">
+        <label for="Message">Message</label>
+        <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
+      </div>
+      <button type="submit" class="btn btn-secondary" value="Send">Submit</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="Email">Email address</label>
-    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
-    <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else :)</small>
-  </div>
-  <div class="form-group">
-    <label for="Message">Message</label>
-    <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-secondary" value="Send">Submit</button>
-</form>
-</div>
 
-<!--END CONTACT FORM-->
+  <!--END CONTACT FORM-->
 
 </body>
 
-<footer>
-  <div class="footer-icons">
-
-  </div>
-  <div class="container text-center">
+<footer class="fixed-bottom text-center">
     Matthew Lynner 2020
-  </div>
 </footer>
 
 </html>
