--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,6 @@
 
   <body>
     <!-- Navigation Section -->
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a class="navbar-brand" href="index.html">Matt Lynner</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,15 +41,13 @@
         </div>
     </nav>
 
-    <!--header image-->
-
     <!--Welcome Section-->
     <div class="container welcome-header">
       <h1>Projects</h1>
       <p>Check out what I've been working on!</p>
     </div>
 
-<!--Projects live here..-->
+    <!--Projects live here..-->
     <div id="tc-strength" class="container">
       <div class="row">
         <div class="col-md-4 project-container">
@@ -99,56 +96,51 @@
       </div>
     </div>
 
-<hr class="hrstyleprojects">
+    <hr class="hrstyleprojects">
 
-<div class="container application-header">
-  <h1>Applications</h1>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="card">
-        <img class="card-img-top" src="images/colorgame.png" alt="ColorGame">
-        <div class="card-body">
-          <h5 class="card-title">RGB Color Game</h5>
-          <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
-          <a href="ColorGuessingGame/color.html" class="btn btn-secondary">View</a>
-        </div>
-      </div>
+    <div class="container application-header">
+      <h1>Applications</h1>
     </div>
-      <div class="col-sm-4">
-        <div class="card">
-          <img class="card-img-top" src="images/quotemachine.png" alt="QuoteMachine">
-          <div class="card-body">
-            <h5 class="card-title">Quote Machine</h5>
-            <p class="card-text">Random quote machine built in Javascript.</p>
-            <a href="quotes/index.html" class="btn btn-secondary">View</a>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <img class="card-img-top" src="images/colorgame.png" alt="ColorGame">
+            <div class="card-body">
+              <h5 class="card-title">RGB Color Game</h5>
+              <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
+              <a href="ColorGuessingGame/color.html" class="btn btn-secondary">View</a>
+            </div>
+          </div>
+        </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img class="card-img-top" src="images/quotemachine.png" alt="QuoteMachine">
+              <div class="card-body">
+                <h5 class="card-title">Quote Machine</h5>
+                <p class="card-text">Random quote machine built in Javascript.</p>
+                <a href="quotes/index.html" class="btn btn-secondary">View</a>
+              </div>
+            </div>
+          </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <img class="card-img-top" src="images/calculator.png" alt="Calculator">
+            <div class="card-body">
+              <h5 class="card-title">Calculator</h5>
+              <p class="card-text">A simple calculator created with vanilla Javascript.</p>
+              <a href="calculator/index.html" class="btn btn-secondary">View</a>
+            </div>
           </div>
         </div>
       </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <img class="card-img-top" src="images/calculator.png" alt="Calculator">
-        <div class="card-body">
-          <h5 class="card-title">Calculator</h5>
-          <p class="card-text">A simple calculator created with vanilla Javascript.</p>
-          <a href="calculator/index.html" class="btn btn-secondary">View</a>
-        </div>
-      </div>
     </div>
-  </div>
-</div>
 
 </body>
 
-<footer>
-  <div class="footer-icons">
-
-  </div>
-  <div class="container text-center">
-    Matthew Lynner 2020
-  </div>
+<footer class="text-center">
+  Matthew Lynner 2020
 </footer>
 
 </html>
