--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
 </body>
 
-<footer>
-	<div class="text-center">Matthew Lynner 2020</div>
+<footer class="text-center">
+	Matthew Lynner 2020
 </footer>
 
 </html>
