--- a/projects.html
+++ b/projects.html
@@ -41,106 +41,106 @@
         </div>
     </nav>
 
-    <!--Welcome Section-->
-    <div class="container welcome-header">
-      <h1>Projects</h1>
-      <p>Check out what I've been working on!</p>
-    </div>
+  <div class="container">
 
-    <!--Projects live here..-->
-    <div id="tc-strength" class="container">
-      <div class="row">
-        <div class="col-md-4 project-container">
-          <h2>Twin Cities Strength & Fitness</h2>
-          <p>Twin Cities Strenth & Fitness was the first WordPress website I built for my personal training business back in 2018.
-            The TC Strength website featured scheduling software, payment gateway, contact form, and was created to be responsive across all devices.
-          </p>
-          <a href="http://twincitiesstrength.com/" class="btn btn-outline-secondary disabled">View Live Site</a>
+      <!--Welcome Section-->
+      <div class="text-center pt-5">
+        <h1>Projects</h1>
+        <p>Check out what I've been working on!</p>
+      </div>
+
+      <!--Projects live here..-->
+      <div id="tc-strength">
+        <div class="row align-items-center">
+          <div class="col-md-4 project-container">
+            <h2>Twin Cities Strength & Fitness</h2>
+            <p>Twin Cities Strenth & Fitness was the first WordPress website I built for my personal training business back in 2018.
+              The TC Strength website featured scheduling software, payment gateway, contact form, and was created to be responsive across all devices.
+            </p>
+            <a href="http://twincitiesstrength.com/" class="btn btn-outline-secondary disabled">View Live Site</a>
+          </div>
+          <div class="col-md-8">
+            <img class="img-fluid" src="images/TCstrength_macbook.png" alt="TCStrenth" width="100%" height="100%">
+          </div>
         </div>
+      </div>
+
+      <div id="hair-chateau">
+        <div class="row align-items-center">
+          <div class="col-md-4 project-container">
+            <h2>The Hair Chateau</h2>
+            <p>Kaitlnn was looking to replace her static Google Pages website with an updated mobile-first site. 
+              Kaitlynn is now able to create and add new pages to keep all of her customers
+              up to date. The Hair Chateau website was built with WordPress and features Facebook reviews, contact form, and 
+              Google Voice.
+            </p>
+            <a href="http://thehairchateau.org/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
+          </div>
         <div class="col-md-8">
-          <img class="float-right" src="images/TCstrength_macbook.png" alt="TCStrenth" width="100%" height="100%">
+                <img class="img-fluid" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
+        </div>
         </div>
       </div>
-    </div>
 
-    <div id="hair-chateau" class="container">
-      <div class="row">
-        <div class="col-md-4 project-container">
-          <h2>The Hair Chateau</h2>
-          <p>Kaitlnn was looking to replace her static Google Pages website with an updated mobile-first site. 
-            Kaitlynn is now able to create and add new pages to keep all of her customers
-            up to date. The Hair Chateau website was built with WordPress and features Facebook reviews, contact form, and 
-            Google Voice.
-          </p>
-          <a href="http://thehairchateau.org/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
+      <div id="jameson">
+        <div class="row align-items-center">
+          <div class="col-md-4 project-container">
+            <h2>Scott Jameson Portfolio</h2>
+            <p>Scott Jameson was looking for an eye catching and engaging portfolio site to showcase his work.
+              Working with a professional graphic designer, we put together this stunning responsive WordPress site
+              that allows Scott to easily update and blog about his newest projects. 
+            </p>
+            <a href="http://scottjamesonmedia.com/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
+          </div>
+        <div class="col-md-8">
+            <img class="img-fluid" src="images/jameson_macbook.png" alt="JamesonPortfolio" width="100%" height="100%">
         </div>
-       <div class="col-md-8">
-              <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
-      </div>
-      </div>
-    </div>
-
-    <div id="jameson" class="container">
-      <div class="row">
-        <div class="col-md-4 project-container">
-          <h2>Scott Jameson Portfolio</h2>
-          <p>Scott Jameson was looking for an eye catching and engaging portfolio site to showcase his work.
-            Working with a professional graphic designer, we put together this stunning responsive WordPress site
-            that allows Scott to easily update and blog about his newest projects. 
-          </p>
-          <a href="http://scottjamesonmedia.com/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
         </div>
-       <div class="col-md-8">
-              <img class="float-right" src="images/jameson_macbook.png" alt="JamesonPortfolio" width="100%" height="100%">
       </div>
-      </div>
-    </div>
 
     <hr class="hrstyleprojects">
 
-    <div class="container application-header">
-      <h1>Applications</h1>
-    </div>
+    <h1 class="text-center py-5">Applications</h1>
 
-    <div class="container">
-      <div class="row">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/colorgame.png" alt="ColorGame">
+          <div class="card-body">
+            <h5 class="card-title">RGB Color Game</h5>
+            <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
+            <a href="ColorGuessingGame/color.html" class="btn btn-secondary">View</a>
+          </div>
+        </div>
+      </div>
         <div class="col-sm-4">
           <div class="card">
-            <img class="card-img-top" src="images/colorgame.png" alt="ColorGame">
+            <img class="card-img-top" src="images/quotemachine.png" alt="QuoteMachine">
             <div class="card-body">
-              <h5 class="card-title">RGB Color Game</h5>
-              <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
-              <a href="ColorGuessingGame/color.html" class="btn btn-secondary">View</a>
+              <h5 class="card-title">Quote Machine</h5>
+              <p class="card-text">Random quote machine built in Javascript.</p>
+              <a href="quotes/index.html" class="btn btn-secondary">View</a>
             </div>
           </div>
         </div>
-          <div class="col-sm-4">
-            <div class="card">
-              <img class="card-img-top" src="images/quotemachine.png" alt="QuoteMachine">
-              <div class="card-body">
-                <h5 class="card-title">Quote Machine</h5>
-                <p class="card-text">Random quote machine built in Javascript.</p>
-                <a href="quotes/index.html" class="btn btn-secondary">View</a>
-              </div>
-            </div>
-          </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <img class="card-img-top" src="images/calculator.png" alt="Calculator">
-            <div class="card-body">
-              <h5 class="card-title">Calculator</h5>
-              <p class="card-text">A simple calculator created with vanilla Javascript.</p>
-              <a href="calculator/index.html" class="btn btn-secondary">View</a>
-            </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/calculator.png" alt="Calculator">
+          <div class="card-body">
+            <h5 class="card-title">Calculator</h5>
+            <p class="card-text">A simple calculator created with vanilla Javascript.</p>
+            <a href="calculator/index.html" class="btn btn-secondary">View</a>
           </div>
         </div>
       </div>
     </div>
+
+  </div>
 
 </body>
 
 <footer class="text-center">
-  Matthew Lynner 2020
+  Matthew Lynner 2021
 </footer>
 
 </html>
